# termitrad

./: .pre-commit-config.yaml  README.md  pyproject.toml  report_8_nov_2022.ipynb
.github/workflows/: blank.yml
alignment/: README.md
elsapy_scrapping/: config.json  elsapy_scrapping.yml  keywords_articlesEAT_en.txt  keywords_articlesEAT_fr.txt  keywords_articlesSET_en.txt  keywords_articlesSET_fr.txt  requirements.txt  retrieve_abstracts.py  retrieve_txtb.py  utils.py
kw_and_term_extraction/: README.md  report_8_nov_2022.ipynb
kw_and_term_extraction/eda/: analyse.ipynb
kw_and_term_extraction/models/: inferBERT.ipynb  keyBERT.ipynb  raKUN.ipynb  tntKID.ipynb
kw_and_term_extraction/results/tntKid_preds/: en_eat_preds.csv  en_set_preds.csv  fr_eat_preds_kptimes.csv
results/ml6/: eat_kw_prediction_final.csv  set_kw_prediction_final.csv
results/tntKid_preds/: en_eat_preds_kptimes.csv  en_set_preds_kptimes.csv  fr_eat_preds.csv  fr_set_preds.csv  fr_set_preds_kptimes.csv
traduction/: README.md
