[tool.poetry]
name = "termitrad"
version = "0.1.0"
description = "TERMITRAD project"
authors = ["cic4k"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
